Fix styling of comments, add jumpt to and play for clicking on the comment itself

--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,8 @@ If your plugin does not need CSS, delete this file.
 	gap: 2px;
 }
 .comment {
+	padding: 5px;
+	border-radius: 3px;
 	margin-left: 5px;
 	min-height: 20px;
 	transition: all 0.2s;
@@ -153,9 +155,15 @@ If your plugin does not need CSS, delete this file.
 	margin-top: 4px;
 }
 .comment > .content {
+	cursor: pointer;
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
+
+.comment > .content:hover {
+	color: var(--color-accent-1);
+}
+
 .comment > .timestamp:hover {
 	color: var(--color-accent-1);
 }
@@ -164,5 +172,6 @@ If your plugin does not need CSS, delete this file.
 	background-color: #ffffff10;
 }
 .active-comment > .timestamp {
+	cursor: pointer;
 	color: var(--white);
 }
